@@ -37,7 +37,7 @@ build_src_flags =
  -DRAPI_SERIAL
  -DRAPI_WF
  -DRAPI_BTN
-#-DPP_AUTO_AMPACITY
+ -DPP_AUTO_AMPACITY
  -DTIME_LIMIT
  -DCHARGE_LIMIT
  -DMENNEKES_LOCK
